Update success message for login notification

--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
 
 <!-- Login erfolgreich -->
 <div id="loginSuccessScreen" class="container screen">
-  <h2>Login erfolgreich!</h2>
+  <h2>Login war erfolgreich!</h2>
   <p>Sie sind nun eingeloggt. Vielen Dank!</p>
+  <p>Als nächste müssen Sie dei Umfrage noch beantworten. Den Link finden Sie in der Email oder gleich hier:</p>
 </div>
 
 <script>
