--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Krankenkasse ABC - Login</title>
+  <title>Email ABC - Login</title>
   <style>
     /* ===== Modernes Lila E-Mail Login Design ===== */
     body {
@@ -94,14 +94,14 @@
 </head>
 <body>
 
-<header>Krankenkasse ABC</header>
+<header>Email ABC</header>
 
 <!-- Registrierung -->
 <div id="registerScreen" class="container screen active">
   <h2>Konto erstellen</h2>
   <form id="registerForm">
     <label>E-Mail</label>
-    <input name="username" placeholder="name@example.com" required>
+    <input name="username"required>
     <label>Passwort</label>
     <input name="password" type="password" placeholder="Passwort" required>
     <label>Passwort wiederholen</label>
@@ -116,7 +116,7 @@
   <h2>Login</h2>
   <form id="loginForm">
     <label>E-Mail</label>
-    <input name="username" placeholder="name@example.com" required>
+    <input name="username" required>
     <label>Passwort</label>
     <input name="password" type="password" placeholder="Passwort" required>
     <button>Login</button>
