Update survey link to be clickable in login success message

--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 <div id="loginSuccessScreen" class="container screen">
   <h2>Login war erfolgreich!</h2>
   <p>Sie sind nun eingeloggt. Vielen Dank!</p>
-  <p>Als nächste müssen Sie die Umfrage noch beantworten. Den Link finden Sie hier: https://study.hcs.ruhr-uni-bochum.de/jfe/form/SV_3IWHPu7egUatFWu oder in der Email.</p>
+  <p>Als nächste müssen Sie die Umfrage noch beantworten. Den Link finden Sie hier: 
+    <a href="https://study.hcs.ruhr-uni-bochum.de/jfe/form/SV_3IWHPu7egUatFWu"> Fragebogen </a> oder in der Email.</p>
 </div>
 
 <script>
